--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
