--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "test": "jest",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
@@ -19,7 +19,6 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
-    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
     "morgan": "^1.10.0",
@@ -27,6 +26,9 @@
   },
   "devDependencies": {
     "eslint": "^8.55.0",
-    "eslint-plugin-node": "^11.1.0"
+    "eslint-plugin-node": "^11.1.0",
+    "jest": "^29.7.0",
+    "npm": "^10.2.5",
+    "supertest": "^6.3.3"
   }
 }
